# dynamic-workflow

./: .gitignore  CMakeLists.txt  README.md  common.h  main.cpp  master_workers.xml  scheduler.cpp  scheduler.h  small_platform.xml  task.cpp  task.h  tasks_graph.cpp  tasks_graph.h  workflow.yml
common/: common.cpp  common.h
resources/: cluster_100_1_2_1_1_0.xml  cluster_4_2_1000_0_0.xml  small_platform.xml  vms.yml  workflow.yml
resources/test_data/: laggy_vm.yml  multiple_transfers.yml  multiple_transfers_platform.xml  no_dependencies.yml  simple_chain.yml  single_vm.yml  vm_order_reversed.yml  vm_order_straight.yml
resources/workflows/: CyberShake_100.yml  Epigenomics_100.yml  Inspiral_100.yml  Montage_100.yml  montage_1_5.yml  montage_2_0.dax  montage_2_0.yml
schedulers/: naive_scheduler.cpp  scheduler_base.h
src/: argument_parser.cpp  argument_parser.h  main.cpp  platform_generator.cpp  platform_generator.h  scheduler_factory.cpp  scheduler_factory.h  spec.h  task.cpp  task.h  tasks_graph.cpp  tasks_graph.h  viewer.cpp  viewer.h  vm_list.cpp  vm_list.h
src/common/: common.cpp  common.h  parse_log.cpp  parse_log.h
src/events/: event.h  event_factory.cpp  event_factory.h
src/files/: description.h  manager.cpp  manager.h
src/platform/: cloud_platform.cpp  cloud_platform.h  host.cpp  host.h  platform.cpp  platform.h
src/prototypes/: cloud_simulator.cpp  cloud_simulator.h  interface.h  scheduler.cpp  scheduler.h  simulator.cpp  simulator.h
src/schedule/: schedule.cpp  schedule.h  schedule_action.cpp  schedule_action.h
src/schedulers/: baseline_scheduler.cpp  baseline_scheduler.h  genetic_scheduler.cpp  genetic_scheduler.h  mao_scheduler.cpp  mao_scheduler.h  naive_scheduler.cpp  naive_scheduler.h  old_mao_scheduler.cpp  old_mao_scheduler.h  scheduler_base.cpp  scheduler_base.h
src/tests/: simple.cpp
src/view/: platform.h  status.h  task_view.h  viewer.cpp  viewer.h
src/virtual/: virtual_machine.h
src/workflow/: abstract_graph.h  file.cpp  file.h  graph.cpp  graph.h  graph_iterator.cpp  node.cpp  node.h  task.cpp  task.h
tools/: plat_gen.py  xml_yaml_parser.py
xml_yaml_parser/: CyberShake_100.yml  Epigenomics_100.yml  Inspiral_100.yml  Montage_100.yml  parser.py
